c++: Template template parameter in constraint [PR95371]

gcc/cp/ChangeLog:

	PR c++/95371
	* pt.c (process_template_parm): Set DECL_TEMPLATE_INFO
	on the DECL_TEMPLATE_RESULT.

gcc/testsuite/ChangeLog:

	PR c++/95371
	* g++.dg/cpp2a/concepts-ttp1.C: New test.

(cherry picked from commit d91b3aea7a5bdfbdaec746af2d62894812e6fd86)